--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@ h1 {
   font-family: 'Raleway', sans-serif;
   font-size: 24px;
   font-weight: 800;
+  color: #0E63B2;
 }
 
 h2 {
   font-family: 'Open Sans', sans-serif;
   color: #666560;
-  padding: 10px;
   font-weight: 300;
   font-size: 18px;
 }
@@ -19,7 +19,6 @@ h2 {
 h3 {
   font-family: 'Open Sans', sans-serif;
   color: #666560;
-  padding: 5px;
   font-weight: 500;
   font-size: 16px;
 }
@@ -27,7 +26,6 @@ h3 {
 p {
   font-family: 'Open Sans', sans-serif;
   color: #96958E;
-  padding: 5px;
   font-size: 15px;
 }
 
@@ -41,16 +39,22 @@ a:hover {
   color: #2badff;
 }
 
+.bottom-margin-30px {
+  margin-bottom: 30px;
+}
 
 .btn-blue {
   padding: 10px 20px;
   color: white;
   background-color: #2aa2ed;
   border-radius: 3px;
+  font-family: 'Open Sans', sans-serif;
+  font-size:15px;
 }
 
 .btn-blue:hover {
   background-color: #2badff;
+  color: white;
 }
 
 .text-center {
@@ -61,7 +65,7 @@ a:hover {
   background-color: white;
   width: 500px;
   margin: 20px auto;
-  padding: 20px;
+  padding: 30px;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   border-radius: 3px;
 }
@@ -73,7 +77,7 @@ a:hover {
 
 .list-inline > li {
   display: inline-block;
-  margin: 0 20px;
+  margin: 0 40px;
   font-size: 20px;
 }
 
@@ -86,16 +90,11 @@ a:hover {
   font-size: 20px;
 }
 
-#top-box {
-  color: #0E63B2;
-}
-
 #profile-picture {
   border-radius: 50%;
   width: 100px;
   border: 3px solid #96958E;
 }
-
 
 #places img {
   width: 100px;
